tests/baselines/reference/parserGreaterThanTokenAmbiguity15.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity15.ts (1 errors) ====
    1 
    ~
!!! parserGreaterThanTokenAmbiguity15.ts(1,1): error TS2130: Invalid left-hand side of assignment expression.
    // before
    >>= // after
    2;